prevent modal from being too big for screen

--- a/src/scss/layout/_modal.scss
+++ b/src/scss/layout/_modal.scss
@@ -82,7 +82,7 @@ $header-height: 80px;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.04);
 
     max-width: 600px;
-    max-height: 100vh;
+    max-height: 85vh;
     height: auto;
 
     margin: 0 auto;
